php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46379 Infinite loop when parsing '#' in one line file.
Submitted: 2008-10-24 12:26 UTC Modified: 2008-11-03 23:39 UTC
From: marek dot miska at netart dot pl Assigned:
Status: Closed Package: CGI/CLI related
PHP Version: 5.2CVS-2008-10-24 (only!) OS: *
Private report: No CVE-ID: None
 [2008-10-24 12:26 UTC] marek dot miska at netart dot pl
Description:
------------
Given one line script starting with "#" and without end line character,
php enters infinite loop.

Reproduce code:
---------------
#and no new line

Expected result:
----------------
empty output

Actual result:
--------------
Infinite loop.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-10-24 15:39 UTC] jani@php.net
verified with current PHP_5_2, not present in PHP_5_3 or HEAD.
 [2008-11-03 23:39 UTC] lbarnaud@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC