Fixed bug #46379 (Infinite loop when parsing '#' in one line file) # PHP_5_2 only